--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="https://www.dimi.univr.it/?ent=persona&id=218">Marco Cristani</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Yiming Wang</a><sup>1</sup>,
+              <a href="https://www.yimingwang.it/">Yiming Wang</a><sup>1</sup>,
             </span>
           </div>
 
