qualitatives+arxiv button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Seeing the Abstract: Translating the Abstract Language for Vision Language Models</h1>
+          <h1 class="title is-2 publication-title">Seeing the Abstract: Translating the Abstract Language for Vision Language Models</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://davidetalon.github.io/">Davide Talon</a><sup>*1</sup>,</span>
@@ -52,7 +52,7 @@
             </span>
           </div>
 
-          <div class="is-size-5 publication-authors">
+          <div class="is-size-6 publication-authors">
             <span class="author-block"><sup>1</sup>Fondazione Bruno Kessler (FBK),</span>
             <span class="author-block"><sup>2</sup>University of Verona,</span>
             <span class="author-block"><sup>3</sup>Polytechnic of Turin</span></br>
@@ -69,6 +69,15 @@
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
+                  </a>
+              </span>
+              <span class="link-block">
+                <a href="https://arxiv.org/"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>ArXiv</span>
                   </a>
               </span>
             </div>
@@ -127,6 +136,27 @@
   </div>
 </section>
 
+<section class="section" id="qualitatives">
+  <div class="container is-max-desktop content">
+    <h2 class="title">Qualitatives</h2>
+    <p>
+    Qualitative examples of retrieval using our ACT, on the test split of DeepFashion.
+    </p>
+    <img src="./static/images/qualitatives-2-lr.png" alt="Fashion-ACT teaser image."/>
+    <img src="./static/images/qualitatives-3-lr.png" alt="Fashion-ACT teaser image."/>
+</div>
+</section>
+
+<section class="section" id="acknowledgment">
+  <div class="container is-max-desktop content">
+    <h2 class="title">Acknowledgment</h2>
+This study was supported by LoCa AI, funded by Fondazione CariVerona (Bando Ricerca e Sviluppo 2022/23), PNRR FAIR - Future AI Research (PE00000013) and Italiadomani (PNRR, M4C2, Investimento 3.3), funded by NextGeneration EU.
+We acknowledge the CINECA award under the
+ISCRA initiative, for the availability of high-performance computing resources and support.
+We acknowledge EuroHPC Joint Undertaking for awarding us access to MareNostrum5 as BSC, Spain.
+Finally, we acknowledge HUMATICS, a SYS-DAT Group company, for their valuable contribution to this research.
+</div>
+</section>
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
