--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
 
 <section class="section" id="qualitatives">
   <div class="container is-max-desktop content">
-    <h2 class="title">Qualitatives</h2>
-    <p>
+
+
+    <h2 class="title has-text-centered">Qualitatives</h2>
+    <p class="has-text-centered">
     Qualitative examples of retrieval using our ACT, on the test split of DeepFashion.
     </p>
-    <img src="./static/images/qualitatives-2-lr.png" alt="Fashion-ACT teaser image."/>
-    <img src="./static/images/qualitatives-3-lr.png" alt="Fashion-ACT teaser image."/>
+    <img class="is-centered" src="./static/images/qualitatives-2-lr.png" alt="Fashion-ACT qualitatives."/>
+    <img class="is-centered" src="./static/images/qualitatives-3-lr.png" alt="Fashion-ACT qualitatives."/>
 </div>
 </section>
 
